--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@esss/ng-xform": "^0.25.0",
+    "@ng-select/ng-select": "^2.3.5",
+    "bootstrap": "^3.4.1",
     "core-js": "^2.5.4",
+    "mathjs": "^3.20.2",
+    "ngx-bootstrap": "^3.0.1",
+    "react-bootstrap": "^1.0.0-beta.11",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
