Additional styling, and adding red stars for mandatory questions

--- a/angular.json
+++ b/angular.json
@@ -84,7 +84,7 @@
             ],
             "scripts": [],
             "assets": [
-              "src/favicon.ico",
+              "src/logo.png",
               "src/assets"
             ]
           }
